[gd_scene load_steps=26 format=3 uid="uid://bo82chpiopg54"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_3e5tt"]
[ext_resource type="PackedScene" uid="uid://qwaq8gaisp6c" path="res://game_tile.tscn" id="1_ed5m1"]
[ext_resource type="Texture2D" uid="uid://bcqbqbfu64w8c" path="res://assets/Images/backgrounds.png" id="2_y604g"]
[ext_resource type="Script" path="res://background.gd" id="3_20h8o"]
[ext_resource type="Script" path="res://Global/BOARD.gd" id="4_nmhqh"]
[ext_resource type="PackedScene" uid="uid://crs80oppmnox6" path="res://background_tile.tscn" id="5_bwn3f"]
[ext_resource type="Script" path="res://Global/PIT.gd" id="5_mrluv"]
[ext_resource type="PackedScene" uid="uid://8y3t7elpug68" path="res://tool_background_tile.tscn" id="6_rh1no"]
[ext_resource type="Script" path="res://Global/LINE.gd" id="6_vstfk"]
[ext_resource type="PackedScene" uid="uid://b8a8bfgs7mrvs" path="res://selection_tile.tscn" id="7_3lrgi"]
[ext_resource type="Script" path="res://Global/BRICK.gd" id="7_sql4l"]
[ext_resource type="PackedScene" uid="uid://cw30exc5aa45u" path="res://audio.tscn" id="8_to6od"]
[ext_resource type="Texture2D" uid="uid://bikexw8nixrnq" path="res://assets/Images/UI/vanish.png" id="9_5hugd"]
[ext_resource type="Script" path="res://score.gd" id="9_s05xj"]
[ext_resource type="PackedScene" uid="uid://bd2m28ykh7qwe" path="res://lightning.tscn" id="10_rj7my"]
[ext_resource type="Script" path="res://lightning.gd" id="12_ihpgp"]
[ext_resource type="Texture2D" uid="uid://b7ithvq7uagdu" path="res://assets/Images/UI/game_over.png" id="17_5t1t6"]
[ext_resource type="Texture2D" uid="uid://d03wv2wyhb70c" path="res://assets/Images/UI/button.png" id="18_25puq"]
[ext_resource type="Script" path="res://replay.gd" id="19_vg7a3"]
[ext_resource type="PackedScene" uid="uid://dap1kb7ujraeq" path="res://fade.tscn" id="20_57qfn"]

[sub_resource type="Animation" id="Animation_jt4qq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2vajw"]
resource_name = "vanish"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.785398]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nuryj"]
_data = {
"RESET": SubResource("Animation_jt4qq"),
"vanish": SubResource("Animation_2vajw")
}

[sub_resource type="Animation" id="Animation_6tgx4"]
resource_name = "pop_in"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b0tnt"]
_data = {
"pop_in": SubResource("Animation_6tgx4")
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_3e5tt")

[node name="background" type="Sprite2D" parent="."]
z_index = -20
texture = ExtResource("2_y604g")
centered = false
hframes = 3
vframes = 3
script = ExtResource("3_20h8o")
metadata/_edit_lock_ = true

[node name="Board" type="Node2D" parent="background"]
script = ExtResource("4_nmhqh")

[node name="Pit" type="Node2D" parent="background"]
script = ExtResource("5_mrluv")

[node name="Line" type="Node2D" parent="background"]
script = ExtResource("6_vstfk")

[node name="Brick" type="Node2D" parent="background"]
script = ExtResource("7_sql4l")

[node name="tile" parent="background" instance=ExtResource("1_ed5m1")]
visible = false
z_index = 5

[node name="background_tile" parent="background" instance=ExtResource("5_bwn3f")]

[node name="tool_background_tile" parent="background" instance=ExtResource("6_rh1no")]
visible = false

[node name="selection_tile" parent="background" instance=ExtResource("7_3lrgi")]
position = Vector2(437, 34)

[node name="vanish" type="Sprite2D" parent="background"]
position = Vector2(7.62939e-06, 0)
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("9_5hugd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="background/vanish"]
libraries = {
"": SubResource("AnimationLibrary_nuryj")
}

[node name="Hud" type="Node2D" parent="background"]
z_index = 10

[node name="Score" type="RichTextLabel" parent="background/Hud"]
self_modulate = Color(31.429, 27.857, 27.143, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = 17.0
offset_right = 79.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]0"
fit_content = true
scroll_active = false
script = ExtResource("9_s05xj")

[node name="Score_Label" type="RichTextLabel" parent="background/Hud"]
offset_left = 10.0
offset_top = 3.0
offset_right = 64.0
offset_bottom = 26.0
bbcode_enabled = true
text = "[center]Score"
scroll_active = false

[node name="Level" type="RichTextLabel" parent="background/Hud"]
offset_left = -7.0
offset_top = 178.0
offset_right = 78.0
offset_bottom = 249.0
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]0"
scroll_active = false

[node name="Level_Label" type="RichTextLabel" parent="background/Hud"]
offset_left = 9.0
offset_top = 167.0
offset_right = 63.0
offset_bottom = 190.0
bbcode_enabled = true
text = "[center]Level"
scroll_active = false

[node name="Goal" type="RichTextLabel" parent="background/Hud"]
self_modulate = Color(31.429, 27.857, 27.143, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = 99.0
offset_right = 79.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]0"
fit_content = true
scroll_active = false

[node name="Goal_Label" type="RichTextLabel" parent="background/Hud"]
offset_left = 9.0
offset_top = 85.0
offset_right = 63.0
offset_bottom = 108.0
bbcode_enabled = true
text = "[center]Goal"
scroll_active = false

[node name="Moves" type="RichTextLabel" parent="background/Hud"]
visible = false
self_modulate = Color(31.429, 27.857, 27.143, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -6.0
offset_top = 94.0
offset_right = 79.0
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 6
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]0"
fit_content = true
scroll_active = false

[node name="Moves_Label" type="RichTextLabel" parent="background/Hud"]
visible = false
offset_left = 9.0
offset_top = 85.0
offset_right = 63.0
offset_bottom = 108.0
bbcode_enabled = true
text = "[center]Moves"
scroll_active = false

[node name="Audio" parent="." instance=ExtResource("8_to6od")]

[node name="Lightning" parent="." instance=ExtResource("10_rj7my")]
visible = false
z_index = 6
position = Vector2(0, 2)
script = ExtResource("12_ihpgp")

[node name="Game over UI" type="MarginContainer" parent="."]
visible = false
z_index = 11
offset_right = 300.0
offset_bottom = 181.0

[node name="Background" type="TextureRect" parent="Game over UI"]
layout_mode = 2
texture = ExtResource("17_5t1t6")

[node name="VBoxContainer" type="VBoxContainer" parent="Game over UI"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Game over UI/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="RichTextLabel" type="RichTextLabel" parent="Game over UI/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Game Over"
fit_content = true
scroll_active = false

[node name="Replay" type="Button" parent="Game over UI/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Play again"
icon = ExtResource("18_25puq")
flat = true
icon_alignment = 1
script = ExtResource("19_vg7a3")

[node name="MarginContainer" type="MarginContainer" parent="Game over UI/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="Switch" type="Button" parent="Game over UI/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Switch mode"
icon = ExtResource("18_25puq")
flat = true
icon_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Game over UI"]
libraries = {
"": SubResource("AnimationLibrary_b0tnt")
}

[node name="Fade" parent="." instance=ExtResource("20_57qfn")]

[connection signal="pressed" from="Game over UI/VBoxContainer/Replay" to="Game over UI/VBoxContainer/Replay" method="_on_pressed"]
